--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -4,47 +4,69 @@
     background-color: rgb(99, 96, 96);
     position: sticky;
     top: 50px;
+    cursor: pointer;
 }
 
 .sideWrapper{
-    padding:20px;
+    padding:40px;
     color:white;
 }
 
 .sidebarMenu{
     color:white;
-    margine-bottom:10px;
+    margin-left: 100;
 }
 
 .sidebarIcons{
+    padding:10px 80px;
    height: 40px;
    display: flex;
    align-items: center;
 }
 .sidebarTitle{
     font-weight: 100;
+    font-size: 25px;
     width: 100%;
-    height: 20px;
+    height: 25px;
+    padding:0px 35px;
     display: flex;
     text-align: center;
 }
 .sidebarSubTitle{
     font-weight: 100;
+    font-size:15px;
+    padding:0px 15px;
     width: 100%;
-    height: 20px;
+    height: 50px;
     display: flex;
     text-align: center;
 }
 
+.sideline{
+    height:1.5px;
+    width:100%;
+    display: flex;
+    background-color:white;
+}
+
 .sidebarList{
     list-style: none;
-    padding:5px;
+    padding-left: 25px;
+    padding-right:10px;
     font-weight: 100;
+    font-size: 15px;
+    align-items: center;
 }
 
 .sidebarlistItem{
     font-weight: 100;
-    padding:5px;
+    padding:7px;
     display: flex;
     align-items: center;
+    cursor: pointer;
+}
+
+.sidebarIcon{
+    margin-right: 7px;
+    font-size:23px ! important;
 }
